[gd_scene load_steps=4 format=3 uid="uid://bqq62h5iae7ex"]

[ext_resource type="Script" path="res://rooms/main_page/main_page.gd" id="1_oh7xu"]
[ext_resource type="PackedScene" uid="uid://beapwchpn8mus" path="res://packed_scenes/gui/navigation/navigation.tscn" id="2_btfeq"]
[ext_resource type="PackedScene" uid="uid://ck1f8y3j8bboo" path="res://packed_scenes/content/content.tscn" id="3_46u60"]

[node name="MainPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_oh7xu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TopNavigation" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_btfeq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Content" parent="ScrollContainer/VBoxContainer" instance=ExtResource("3_46u60")]
unique_name_in_owner = true
layout_mode = 2

[node name="BottonNavigation" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_btfeq")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="next_clicked" from="ScrollContainer/VBoxContainer/TopNavigation" to="." method="_on_navigation_next_clicked"]
[connection signal="previous_clicked" from="ScrollContainer/VBoxContainer/TopNavigation" to="." method="_on_navigation_previous_clicked"]
[connection signal="next_clicked" from="ScrollContainer/VBoxContainer/BottonNavigation" to="." method="_on_navigation_next_clicked"]
[connection signal="previous_clicked" from="ScrollContainer/VBoxContainer/BottonNavigation" to="." method="_on_navigation_previous_clicked"]
